# mandelbrot-viewer

./: .gitignore  README.md  complex_bf.py  constants.py  iterate.c  iterate.pyx  main.py  mandelbrot.cl  mandelbrot.py  mandelbrot_pertubations.cl  mandelbrot_perturbations.cl  mandelbrot_utils.py  mandelbrot_viewer.py  opencl_test.py  pertubations.py  perturbations.py  requirements.txt  setup.cfg
brot/: __main__.py  cli.py
brot/mandelbrot/: controller.py  mandelbrot.py
brot/mandelbrot/opencl/: mandelbrot.cl  mandelbrot_cl.py
brot/mandelbrot/perturbations/: perturbation.py
brot/mandelbrot/perturbations/perturbation_utils/: perturbation_state.py  perturbed_iteration.py
brot/mandelbrot/perturbations/perturbation_utils/opencl/: mandelbrot_perturbation_cl.py
brot/mandelbrot/perturbations/reference_utils/: reference.py  series_approximation.py
brot/ui/: colouring.py  tkinter_ui.py
brot/utils/: constants.py  mandelbrot_utils.py
mandelbrot/: controller.py  mandelbrot.py  mandelbrot_controller.py
opencl/: mandelbrot.cl  mandelbrot_cl.py
perturbations/: mandelbrot_perturbations.cl  perturbation.py  perturbations.py
perturbations/perturbation_utils/: perturbation_state.py  perturbed_iteration.py
perturbations/perturbation_utils/opencl/: mandelbrot_perturbation_cl.py
perturbations/reference_utils/: reference.py  series_approximation.py
perturbations/reference_utils/selection/: blob_search.py  newton_iteration.py
ui/: colouring.py  tkinter_ui.py
utils/: constants.py  mandelbrot_utils.py
(+2 files in other folders)
