[metadata]
name = mandelbrot_viewer
version = 0.1
author = Zane Duffield
author_email = duffieldzane@gmail.com
description = A fast Mandelbrot set explorer using perturbation theory
license = GPL-3.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zaneduffield/mandelbrot-viewer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires = 
    numpy >= 1.20.1
    Pillow ~= 8.1.0
    numba >= 0.52.0
    gmpy2 >= 2.0.8

[options.extras_require]
gpu = 
    pyopencl >= 2021.1.2

[options.entry_points]
console_scripts = 
    brot = brot.__main__:main

[options.package_data]
* = *.cl, *.ico